--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "ui-storymee",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.45.1"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.2",
-    "@types/react": "17.0.37",
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
-  }
+    "name": "ui-storymee",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@ant-design/icons": "^4.7.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.16",
+        "antd": "^4.17.4",
+        "less-loader": "^10.2.0",
+        "next": "12.0.7",
+        "next-plugin-antd-less": "^1.6.0",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.2",
+        "@types/react": "17.0.37",
+        "babel-plugin-import": "^1.13.3",
+        "eslint": "8.5.0",
+        "eslint-config-next": "12.0.7",
+        "typescript": "4.5.4"
+    }
 }
