--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/react-fontawesome": "^0.1.16",
         "antd": "^4.17.4",
+        "less": "^4.1.2",
         "less-loader": "^10.2.0",
         "next": "12.0.7",
         "next-plugin-antd-less": "^1.6.0",
+        "next-with-less": "^2.0.4",
         "react": "17.0.2",
         "react-dom": "17.0.2"
     },
     "devDependencies": {
         "@types/node": "17.0.2",
         "@types/react": "17.0.37",
-        "babel-plugin-import": "^1.13.3",
         "eslint": "8.5.0",
         "eslint-config-next": "12.0.7",
         "typescript": "4.5.4"
