--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
-            "type": "go",
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/src/index.tsx",
             "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}"
+            "skipFiles": ["<node_internals>/**"],
+            "type": "pwa-node"
         }
     ]
 }
