--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/react-fontawesome": "^0.1.16",
         "antd": "^4.17.4",
+        "axios": "^0.24.0",
+        "ckeditor4": "^4.17.1",
+        "ckeditor4-react": "^2.1.0",
+        "formik": "^2.2.9",
+        "html-react-parser": "^1.4.4",
         "less": "^4.1.2",
         "less-loader": "^10.2.0",
         "next": "12.0.7",
         "next-plugin-antd-less": "^1.6.0",
         "next-with-less": "^2.0.4",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "rxjs": "^7.4.0",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/node": "17.0.2",
