--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fortawesome/react-fontawesome": "^0.1.16",
         "antd": "^4.17.4",
         "axios": "^0.24.0",
+        "browser-image-compression": "^1.0.17",
         "ckeditor4": "^4.17.1",
         "ckeditor4-react": "^2.1.0",
         "formik": "^2.2.9",
