--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
         "@ant-design/icons": "^4.7.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
-        "@fortawesome/react-fontawesome": "^0.1.16",
-        "antd": "^4.17.4",
+        "@fortawesome/react-fontawesome": "^0.1.19",
+        "antd": "^4.23.5",
         "axios": "^0.24.0",
         "browser-image-compression": "^1.0.17",
-        "ckeditor4": "^4.17.1",
-        "ckeditor4-react": "^2.1.0",
+        "ckeditor4": "^4.20.0",
+        "ckeditor4-react": "^2.1.1",
         "formik": "^2.2.9",
-        "html-react-parser": "^1.4.4",
-        "less": "^4.1.2",
+        "html-react-parser": "^1.4.14",
+        "less": "^4.1.3",
         "less-loader": "^10.2.0",
         "next": "12.0.7",
-        "next-plugin-antd-less": "^1.6.0",
-        "next-with-less": "^2.0.4",
+        "next-plugin-antd-less": "^1.8.0",
+        "next-with-less": "^2.0.5",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "rxjs": "^7.4.0",
+        "react-icons": "^4.6.0",
+        "rxjs": "^7.5.7",
         "yup": "^0.32.11"
     },
     "devDependencies": {
